# HapTuner

./: .gitignore  CMakeLists.txt  README.md
Arduino/: Arduino.ino  note_name.h  pitch_utils.cpp  pitch_utils.h
HapTuner/: HapTuner.ino
docs/: index.html  index.md
src/: main.c  main.cpp  main.h  note.cpp  note.h  note_name.cpp  note_name.h  pitch_utils.c  pitch_utils.cpp  pitch_utils.h  tuned_note.cpp  tuned_note.h
